# PyRayT

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE.txt  Makefile  Pipfile  pycg.py  pyproject.toml  readme.md  tox.ini
.circleci/: config.yml
adi_optics/: pycg.py  surfaces.py
adi_optics/pycg/: pycg.py
adpd/packaging/: analytic_surface.py  designer.py  renderers.py  simple_cg.py  surfaces.py
adpd/packaging/components/: sources.py
adpd/packaging/shaders/: analytic.py
docs/: requirements.txt
docs/source/: adi_optics.rst  changelog.rst  conf.py  examples.rst  index.rst  install.rst  license.rst  packaging.rst  pyrayt.rst  reference.rst  release.rst  tutorial.rst
docs/source/_ext/: encyclopedia.py
docs/source/reference/: components.rst  dataframes.rst  index.rst  introduction.rst  materials.rst
examples/: chromatic_dispersion.py  convex_collimator.py  lens_design.ipynb
integration_tests/: test_ray_plane_intersection.py
mathematica/AdiOptics/: Components.m  Simulators.m  adpdOptics.m
mathematica/test/: TestSources.nb  TestSources.wlt
pyrayt/: __init__.py  _pyrayt.py  components.py  designer.py  materials.py  renderers.py  simple_cg.py  surfaces.py  utils.py
pyrayt/components/: __init__.py  lenses.py  sources.py
pyrayt/shaders/: analytic.py
scripts/: poetry_init.sh
test/: test_analytic_shaders.py  test_asurfaces.py  test_designer.py  test_renderers.py  test_simple_cg.py  test_surfaces.py
test/integration_tests/: int_test_thick_lenses.py
test/test_components/: test_sources.py
test/test_pyrayt/: test_core.py  test_pyrayt_materials.py  test_utils.py
test/test_simple_cg/: test_2d_shapes.py  test_simple_cg.py
test/test_tinygfx/: test_2d_shapes.py
test/test_tinygfx/test_g3d/: test_csg.py  (+7 more)
tinygfx/g3d/: __init__.py  csg.py  operations.py  primitives.py  renderers.py  surfaces.py  world_objects.py
(+6 files in other folders)
