[tool.poetry]
name = "adi_optics"
version = "0.1.0"
description = "a toolchain for developing and simulating optical packages"
authors = ["Frazier, Ryan <Ryan.Frazier@analog.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.0"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]
tox = "^3.21.4"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
