[tool.poetry]
name = "pyrayt"
version = "0.3.1"
description = "a toolchain for developing and simulating optical packages"
authors = ["Frazier, Ryan"]
license = "MIT"
packages = [
    {include = "pyrayt"},
    {include = "tinygfx"}
]

[tool.poetry.dependencies]
python = ">=3.7.0 <3.9"
numpy = "^1.20.0"
scipy = "^1.6.0"
pandas = "^1.2.2"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
coverage = "^5.4.0"
tox = "^3.21.4"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-prompt = "^1.4.0"
black = "^21.7b0"
pylint = "^2.9.3"
sphinx-autobuild = "^2021.3.14"
ipykernel = "^6.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
